--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,35 @@
-*.iml
-*.ipr
-*.iws
-*.log
-*.versionsBackup
-*.swp
-.ideas
+# Eclipse
+.project
+.classpath
+.settings/
+bin/
+
+# IntelliJ
 .idea
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode
+
+# OSX
 .DS_Store
-.attach
-*.hprof
-/target
-/*/target
-/trace.db
-.jhw-cache
-dependency-reduced-pom.xml
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
